--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -220,7 +220,7 @@ We recruited 36 piano experts who played the piano for at least the past 10 year
 
 A weighted Yamaha MIDI digital piano was used to record participants' performance via Max/MSP (\url{https://cycling74.com/products/max}) on a MacBook Pro with Mac OS X Mojave 10.14.3. The laptop and piano were connected to a high-fidelity soundcard (Focusrite Scarlett 6i6) to deliver a metronome and piano sound. All auditory feedback was given to participants through headphones (Audio-Technica ATH-M50X). Sheet music was displayed on a computer monitor in front of the participants. The pitch, onset and offset time of each note, and key velocity profiles were obtained from MIDI data using Max/MSP patchers.
 
-One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys'' by Edna-Mae Burnam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Non-expressive sheet music (i.e., sheet music without expressive notations, \emph{Fig \ref{fig:stimuli} A}) was used for the purpose of practice. Expressive notations were added to the non-expressive sheet music for the experiment. They referred to either articulation or dynamics (\emph{Fig \ref{fig:stimuli} B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated as either forte or piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not necessary.
+One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen a Day - Play with Ease in Many Keys'' by Edna-Mae Burnam and modified for the experiment. It consisted of a 6-measure isochronous melody noted in 4/4 meter. The stimulus was composed in C major to be played with the right hand only. Original sheet music (i.e., sheet music without expressive notations, \emph{Fig \ref{fig:stimuli} A}) was used for the purpose of practice. Expressive notations were added to the original sheet music for the experiment. They referred to either articulation or dynamics (\emph{Fig \ref{fig:stimuli} B-C}). Articulation was notated as either legato or staccato. Legato indicates that musical notes are to be connected and should sound smooth. Staccato requires producing musical notes with shortened duration, keeping them separate from each other. Dynamics was notated as either forte or piano. Forte indicates that musical notes should be played loudly whereas piano indicates that musical notes should be played softly. The notation did not include any indication of fingering (i.e., the positioning of the fingers when playing the piano) because the piece was simple and pilot testing had shown that specifying fingering was not necessary.
 
 \hypertarget{procedure}{%
 \subsubsection{Procedure}\label{procedure}}
@@ -241,7 +241,7 @@ Data cleaning, preprocessing and statistical analysis were performed in R versio
 We performed separate analyses for the two expressive techniques (i.e., articulation and dynamics). A paired-sample \emph{t}-test or a Wilcoxon Signed-rank test (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (Articulation: legato vs.~staccato or Dynamics: forte vs.~piano, respectively). The \emph{t.test} or \emph{wilcox.test} function in the \emph{stats} R package was used for a \emph{t}-test or a Wilcoxon Signed-rank test. For calculating an effect size, we used the \emph{rstatix} R package. The \emph{aov\_car} function in the \emph{afex} R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the \emph{emmeans} R package.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Original sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
 \end{figure}
 
 \newpage
@@ -329,12 +329,12 @@ We recruited 21 piano experts who already had a degree (above bachelor or equiva
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
 
-The same apparatus as in Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contained our targeted expressions (i.e., articulation and dynamics) and was relatively simple in terms of motor skills. The first 12 measures of the original piece were used and modified so that the piece had an almost equal number of data points for each dependent variable. The modified piece consisted of a 12-measure isochronous melody notated in 4/4 meter to be played with the right hand only. Non-expressive sheet music was used for the purpose of practice (\emph{Fig \ref{fig:stimuli-2} A}). Expressive notations were added to the non-expressive sheet music for the experiment (\emph{Fig \ref{fig:stimuli-2} B-C}). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
+The same apparatus as in Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contained our targeted expressions (i.e., articulation and dynamics) and was relatively simple in terms of motor skills. The first 12 measures of the original piece were used and modified so that the piece had an almost equal number of data points for each dependent variable. The modified piece consisted of a 12-measure isochronous melody notated in 4/4 meter to be played with the right hand only. Original sheet music was used for the purpose of practice (\emph{Fig \ref{fig:stimuli-2} A}). Expressive notations were added to the original sheet music for the experiment (\emph{Fig \ref{fig:stimuli-2} B-C}). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
 
 \hypertarget{procedure-2}{%
 \subsubsection{Procedure}\label{procedure-2}}
 
-We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., \emph{Fig \ref{fig:stimuli-2} A}) prior to the experiment. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplementary}{Supplementary material}}). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 quarter beats per minute). The chosen tempo was again cued by a leading metronome. To make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the non-expressive sheet music (\emph{Fig \ref{fig:stimuli-2} A}). Those who could not perform the piece without pitch errors twice consecutively within five attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
+We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., \emph{Fig \ref{fig:stimuli-2} A}) prior to the experiment. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplementary}{Supplementary material}}). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 quarter beats per minute). The chosen tempo was again cued by a leading metronome. To make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the original sheet music (\emph{Fig \ref{fig:stimuli-2} A}). Those who could not perform the piece without pitch errors twice consecutively within five attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
 
 \hypertarget{data-analysis-1}{%
 \subsubsection{Data analysis}\label{data-analysis-1}}
@@ -342,7 +342,7 @@ We employed the same procedure as in Experiment 1 with several modifications. Fi
 Data cleaning, preprocessing and statistical analysis were almost identical to Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included. IOIs were normalised by their preferred tempo because each participant chose a tempo from the three options. Given the different tempi, key-overlap ratios (KORs) were calculated by dividing KOT by the mean IOI of each performance to normalise KOT. Additionally, we include KV difference (i.e., KV difference for each interval) at transition points (i.e., forte to piano or piano to forte) as a dependent variable based on the findings of Experiment 1. Three trials were entirely excluded from data analysis because participants did not follow the sheet music. Using the same approach as in Experiment 1, pitch errors were removed manually. For onsets, 11.62\% of the trials contained at least one pitch error (extra notes: 5.81\%, missing notes: 5.49\%, substituted notes: 0.31\%). For offsets, 17.90\% of the trials contained at least one pitch error (extra notes: 5.81\%, missing notes: 5.49\%, substituted notes: 6.59\%). As a result, less than 1 \% of total responses were corrected. For each dependent variable, removing outliers (i.e., responses outside 3 standard deviations from the mean) resulted in less than 5\% of overall responses being removed.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.}\label{fig:stim-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Original sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.}\label{fig:stim-2}
 \end{figure}
 
 \hypertarget{results-1}{%
@@ -624,7 +624,7 @@ A paired-sample \emph{t}-test showed that IOIs at transition points were larger 
 To compare the mean IOIs at transition points between the teaching and performing condition, we conducted a Wilcoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution (\emph{p} = 0.004). The Wilcoxon Signed-rank test revealed that IOIs at transition points did not differ significantly between the teaching {[}\emph{Mdn} = 1.00, \emph{IQR} = 0.06{]} and the performing condition {[}\emph{Mdn} = 0.99, \emph{IQR} = 0.05{]} while playing the piece with the notated dynamics (\emph{p} = 0.60, \emph{r} = 0.13, two-tailed, \emph{Fig \ref{fig:tra}}).
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-tra-1} \caption{\label{fig:tra}Experiment 1, 2: IOIs at transition points when playing the piece with either articulation or dynamics (left: Experiment 1, right: Experiment 2). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-tra}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-tra-1} \caption{\label{fig:tra}Experiment 1, 2: IOIs at transition points when playing the piece with either articulation or dynamics (left: Experiment 1, right: Experiment 2). A dashed line represents the tempo given by a metronome. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-tra}
 \end{figure}
 
 
