--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -38,10 +38,10 @@ linenumbers       : no
 mask              : no
 draft             : no
 
-output: papaja::apa6_word
-# output:
-#   papaja::apa6_pdf:
-#     latex_engine: xelatex
+# output: papaja::apa6_word
+output:
+  papaja::apa6_pdf:
+    latex_engine: xelatex
 ---
 
 ```{r set-up, include = FALSE}
@@ -620,6 +620,8 @@ image_write(img_ioi_cv, path = here("paper/figure", "Fig10.tiff"), format = "tif
 img_ioi_cv
 ```
 
+\clearpage
+
 # Temporal grouping
 
 In order to investigated if participants used temporal grouping to make a boundary between each subcomponent (e.g., between legato and staccato, between forte and piano) clearer for teaching purposes, we looked at IOIs only at transition points. 
@@ -680,3 +682,20 @@ img_ioi_tra <- image_scale(img_ioi_tra, "2200")
 image_write(img_ioi_tra, path = here("paper/figure", "Fig10.tiff"), format = "tiff")
 img_ioi_tra
 ```
+
+\clearpage
+
+# Additional analysis for dynamics difference
+## Experiment 1
+```{r additional-dynamics-1, include = FALSE}
+source(here("experiment-1/analysis/stats", "dynamics.R"), chdir = TRUE)
+```
+
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs. performing) and Transition Type (FtoP vs. PtoF) showed that there was a significant main effect of Transition Type (*F*(`r vel_diff_dyn_aov_3$anova_table[2,1]`,`r vel_diff_dyn_aov_3$anova_table[2,2]`) = `r sprintf('%.0f', vel_diff_dyn_aov_3$anova_table[2,4])`, *p* `r if(vel_diff_dyn_aov_3$anova_table[2,6] < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', vel_diff_dyn_aov_3$anova_table[2,6]))}`, $\eta_G^2$ = `r sprintf('%.2f', vel_diff_dyn_aov_3$anova_table[2,5])`) and a significant interaction between Condition and Transition Type (*F*(`r vel_diff_dyn_aov_3$anova_table[3,1]`,`r vel_diff_dyn_aov_3$anova_table[3,2]`) = `r sprintf('%.2f', vel_diff_dyn_aov_3$anova_table[3,4])`, *p* `r if(vel_diff_dyn_aov_3$anova_table[3,6] < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', vel_diff_dyn_aov_3$anova_table[3,6]))}`, $\eta_G^2$ = `r sprintf('%.3f', vel_diff_dyn_aov_3$anova_table[3,5])`, *Fig TBC*). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was no significant difference when changing from forte to piano (*p* `r if(vel_diff_dyn_posthoc_2$p.value[1] < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', vel_diff_dyn_posthoc_2$p.value[1]))}`) and from piano to forte (*p* `r if(vel_diff_dyn_posthoc_2$p.value[2] < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', vel_diff_dyn_posthoc_2$p.value[2]))}`) between the teaching condition [FtoP: *M* = `r vel_diff_dyn_normalised_all[Condition == "teaching" & Subcomponent == "FtoP"]$Mean`, *SD* = `r vel_diff_dyn_normalised_all[Condition == "teaching" & Subcomponent == "FtoP"]$SD`, PtoF: *M* = `r vel_diff_dyn_normalised_all[Condition == "teaching" & Subcomponent == "PtoF"]$Mean`, *SD* = `r vel_diff_dyn_normalised_all[Condition == "teaching" & Subcomponent == "PtoF"]$SD`] and the performing condition [FtoP: *M* = `r vel_diff_dyn_normalised_all[Condition == "performing" & Subcomponent == "FtoP"]$Mean`, *SD* = `r vel_diff_dyn_normalised_all[Condition == "performing" & Subcomponent == "FtoP"]$SD`, PtoF: *M* = `r vel_diff_dyn_normalised_all[Condition == "performing" & Subcomponent == "PtoF"]$Mean`, *SD* = `r vel_diff_dyn_normalised_all[Condition == "performing" & Subcomponent == "PtoF"]$SD`].
+
+## Experiment 2
+```{r additional-dynamics-2, include = FALSE}
+source(here("experiment-2/analysis/stats", "dynamics.R"), chdir = TRUE)
+```
+
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs. performing) and Transition Type (FtoP vs. PtoF) showed that there was a significant main effect of Transition Type (*F*(`r vel_diff_dyn_aov_3$anova_table[2,1]`,`r vel_diff_dyn_aov_3$anova_table[2,2]`) = `r sprintf('%.0f', vel_diff_dyn_aov_3$anova_table[2,4])`, *p* `r if(vel_diff_dyn_aov_3$anova_table[2,6] < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', vel_diff_dyn_aov_3$anova_table[2,6]))}`, $\eta_G^2$ = `r sprintf('%.2f', vel_diff_dyn_aov_3$anova_table[2,5])`). However, there was no significant interaction between Condition and Transition Type (*F*(`r vel_diff_dyn_aov_3$anova_table[3,1]`,`r vel_diff_dyn_aov_3$anova_table[3,2]`) = `r sprintf('%.2f', vel_diff_dyn_aov_3$anova_table[3,4])`, *p* `r if(vel_diff_dyn_aov_3$anova_table[3,6] < 0.001){"< 0.001"} else {paste("= ", sprintf('%.3f', vel_diff_dyn_aov_3$anova_table[3,6]))}`, $\eta_G^2$ = `r sprintf('%.3f', vel_diff_dyn_aov_3$anova_table[3,5])`, *Fig TBC*).
