update additional analysis for dynamis difference
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -589,6 +589,8 @@ A paired-sample \emph{t}-test showed that the tempo variability of performance d
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-cv-1} \caption{\label{fig:cv}Experiment 1, 2: CVs when playing the piece with either articulation or dynamics (left: Experiment 1, right: Experiment 2). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-cv}
 \end{figure}
 
+\clearpage
+
 \hypertarget{temporal-grouping}{%
 \section{Temporal grouping}\label{temporal-grouping}}
 
@@ -627,18 +629,27 @@ To compare the mean IOIs at transition points between the teaching and performin
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-tra-1} \caption{\label{fig:tra}Experiment 1, 2: IOIs at transition points when playing the piece with either articulation or dynamics (left: Experiment 1, right: Experiment 2). A dashed line represents the tempo given by a metronome. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-tra}
 \end{figure}
 
+\clearpage
+
 \hypertarget{additional-analysis-for-dynamics-difference}{%
 \section{Additional analysis for dynamics difference}\label{additional-analysis-for-dynamics-difference}}
+
+\hypertarget{results-4}{%
+\subsection{Results}\label{results-4}}
 
 \hypertarget{experiment-1-4}{%
 \subsection{Experiment 1}\label{experiment-1-4}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Transition Type (FtoP vs.~PtoF) showed that there was a significant main effect of Transition Type (\emph{F}(1,30) = 741, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.88) and a significant interaction between Condition and Transition Type (\emph{F}(1,30) = 7.87, \emph{p} = 0.009, \(\eta_G^2\) = 0.009, \emph{Fig TBC}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was no significant difference when changing from forte to piano (\emph{p} = 0.085) and from piano to forte (\emph{p} = 0.075) between the teaching condition {[}FtoP: \emph{M} = -0.62, \emph{SD} = 0.24, PtoF: \emph{M} = 1.10, \emph{SD} = 0.34{]} and the performing condition {[}FtoP: \emph{M} = -0.56, \emph{SD} = 0.25, PtoF: \emph{M} = 1.03, \emph{SD} = 0.40{]}.
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Transition Type (FtoP vs.~PtoF) showed that there was a significant main effect of Transition Type (\emph{F}(1,30) = 741, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.88) and a significant interaction between Condition and Transition Type (\emph{F}(1,30) = 7.87, \emph{p} = 0.009, \(\eta_G^2\) = 0.009, \emph{Fig \ref{fig:vel-diff-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was no significant difference when changing from forte to piano (\emph{p} = 0.085) and from piano to forte (\emph{p} = 0.075) between the teaching condition {[}FtoP: \emph{M} = -0.62, \emph{SD} = 0.24, PtoF: \emph{M} = 1.10, \emph{SD} = 0.34{]} and the performing condition {[}FtoP: \emph{M} = -0.56, \emph{SD} = 0.25, PtoF: \emph{M} = 1.03, \emph{SD} = 0.40{]}.
 
 \hypertarget{experiment-2-4}{%
 \subsection{Experiment 2}\label{experiment-2-4}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Transition Type (FtoP vs.~PtoF) showed that there was a significant main effect of Transition Type (\emph{F}(1,19) = 42, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.63). However, there was no significant interaction between Condition and Transition Type (\emph{F}(1,19) = 1.10, \emph{p} = 0.306, \(\eta_G^2\) = 0.008, \emph{Fig TBC}).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Transition Type (FtoP vs.~PtoF) showed that there was a significant main effect of Transition Type (\emph{F}(1,19) = 42, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.63). However, there was no significant interaction between Condition and Transition Type (\emph{F}(1,19) = 1.10, \emph{p} = 0.306, \(\eta_G^2\) = 0.008, \emph{Fig \ref{fig:vel-diff-2}}).
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-vel-diff-2-1} \caption{\label{fig:vel-diff-2}Experiment 1, 2: Normalised KV Difference at transition points when playing the piece with dynamics (left: Experiment 1, right: Experiment 2). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-vel-diff-2}
+\end{figure}
 
 
 \end{document}
